--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     <div class="action-buttons no-print">
                         <button class="btn btn-warning" onclick="resetForm()">Clear</button>
                         <button class="btn btn-secondary" onclick="saveInvoice()">Save</button>
-                        <button class="btn btn-success" onclick="printInvoice()">Print Invoice</button>
+                        <button class="btn btn-success" onclick="printInvoice()">Print</button>
                     </div>
                 </div>
             </div>
