--- a/index.html
+++ b/index.html
@@ -260,16 +260,8 @@
                     <div class="col-md-5">
                         <div class="row">
                             <div class="col-md-4 col-sm-4 col-12 mb-2">
-                                <label>First Name</label>
+                                <label>Full Name</label>
                                 <input type="text" class="form-control" id="firstName" autocomplete="off" placeholder="First Name">
-                            </div>
-                            <div class="col-md-4 col-sm-4 col-12 mb-2">
-                                <label>Middle Name</label>
-                                <input type="text" class="form-control" id="middleName" autocomplete="off" placeholder="Middle Name">
-                            </div>
-                            <div class="col-md-4 col-sm-4 col-12 mb-2">
-                                <label>Last Name</label>
-                                <input type="text" class="form-control" id="lastName" autocomplete="off" placeholder="Last Name">
                             </div>
                         </div>
                     </div>
