--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
             <legend>Customer Information</legend>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-3">
                         <div class="row">
-                            <div class="col-md-4 col-sm-4 col-12 mb-2">
-                                <label>Full Name</label>
-                                <input type="text" class="form-control" id="firstName" autocomplete="off" placeholder="First Name">
+                            <div class="col-md-12 col-sm-8 col-12 mb-2">
+                                <label>Enter Full Name</label>
+                                <input type="text" class="form-control" id="firstName" autocomplete="off" placeholder="Enter Full Name">
                             </div>
                         </div>
                     </div>
@@ -269,17 +269,21 @@
                         <label>Mobile Number</label>
                         <input type="number" class="form-control" id="mobileNumber" autocomplete="off">
                     </div>
-                    <div class="col-md-1 col-sm-3 col-6 mb-2">
+                    <div class="col-md-2 col-sm-6 col-12 mb-2">
                         <label>Prev Dues</label>
                         <input type="number" class="form-control" id="previousDues" autocomplete="off">
                     </div>
-                    <div class="col-md-2 col-sm-6 col-12 mb-2">
-                        <label>Invoice No</label>
-                        <input type="text" class="form-control" value="INV-2023-001" id="invoiceNumber" autocomplete="off" readonly>
-                    </div>
-                    <div class="col-md-2 col-sm-6 col-12 mb-2">
-                        <label>Invoice Date</label>
-                        <input type="date" class="form-control" id="invoiceDate" name="date" autocomplete="off">
+                    <div class="col-md-5">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-12 mb-2">
+                                <label>Invoice No</label>
+                                <input type="text" class="form-control" value="SS-INV-2025-001" id="invoiceNumber" autocomplete="off" readonly>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-12 mb-2">
+                                <label>Invoice Date</label>
+                                <input type="date" class="form-control" id="invoiceDate" name="date" autocomplete="off">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
